align reference image left, ref #18, fix #20

--- a/scss/_content.scss
+++ b/scss/_content.scss
@@ -145,6 +145,14 @@
 	}
 }
 
+.reference-content {
+	.reference-image {
+		float: left;
+		margin-right: 1em;
+		margin-bottom: 1em;
+	}
+}
+
 .read-more {
 	@extend .agile-button;
 }
